version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Common/Graphics/DMCameraWrapper.rst.txt
.. vale off



:class:`DMCameraWrapper`
========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Common.Graphics.DMCameraWrapper(graphics: Ansys.ACT.Common.Graphics.GraphicsWrapper, camera: Ansys.Common.Interop.GraphicsDataModel.IDSCameraItf)

   Bases: :py:obj:`object`


   
   Wrapper for Camera in Design Modeler.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DMCameraWrapper

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetLocation`
            - GetLocation method.
          * - :py:attr:`~GetTarget`
            - GetTarget method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~InternalObject`
            - InternalObject property.
          * - :py:attr:`~ZoomFactor`
            - ZoomFactor property.







Property detail
---------------
.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.GraphicsDataModel.IDSCameraItf]


   
   InternalObject property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZoomFactor
   :type: Optional[float]


   
   ZoomFactor property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLocation() -> Ansys.ACT.Interfaces.Graphics.IWorldPoint

   
   GetLocation method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetTarget() -> Ansys.ACT.Interfaces.Graphics.IWorldPoint

   
   GetTarget method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on